# NP-Dater

./: .gitattributes  README.md  package-lock.json
backend/: CMakeLists.txt  index.js
backend/api/: ApiController.js  ApiService.js  MySQLController.js  MySQLService.js  SolverController.js  SolverService.js
backend/cpp/build_mac_linux/: macBuildHere.txt
backend/cpp/cpp_runner/: Main.cpp  Makefile  Solver.cpp  main
backend/cpp/json_format/: json_format.txt
backend/cpp/model/: Cell.cpp  Cell.hpp  Coord.cpp  Coord.hpp  DateBoard.cpp  DateBoard.hpp  DateBoardGrid.cpp  DateBoardGrid.hpp  DateBoardHex.cpp  DateBoardHex.hpp  ExactCover.cpp  ExactCover.hpp  ExactCoverGrid.cpp  ExactCoverGrid.hpp  GridCoord.cpp  GridCoord.hpp  GridTile.cpp  GridTile.hpp  HexTile.cpp  HexTile.hpp  Solver.cpp  Solver.hpp  Tile.cpp  Tile.hpp
backend/cpp/test/: CellTest.cpp  CoordTest.cpp  DateBoardGridTest.cpp  DateBoardTest.cpp  ExactCoverGridTest.cpp  ExactCoverTest.cpp  GridCoordTest.cpp  GridTileTest.cpp  TileTest.cpp
backend/include/: solver.hpp
backend/mysql/: Init.sql  MySQL.js  TestConnection.js
backend/solver/: Main.cpp  Solver.cpp
backend/src/: main.cpp  solver.cpp
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.js
frontend/src/Javascript/: App.js  Solver.js
frontend/src/api/: Persistence.js  Requests.js  Solve.js
frontend/src/assets/: Fonts.css
frontend/src/context/: DisplayContext.jsx  PuzzleContext.js  PuzzleContext.jsx
frontend/src/css/: Config.css  FrontPage.css  GlobalStyles.css  MainPage.css  (+1 more)
(+19 files in other folders)
